--- a/analytics_management/templates/list.html
+++ b/analytics_management/templates/list.html
@@ -25,7 +25,7 @@
       <div class="list-group">
         <a href="{% url 'analytics-management-campaign' list_object.uuid item.uuid %}" class="list-group-item">
           <h4 class='list-group-item-heading'>
-            {{ item.name }} - {{ item.title }}
+            {{ item.name }} - {{ item.name }}
           </h4>
         </a>
       </div>
