Fix views campaign on analytics_management.

--- a/analytics_management/templates/campaign.html
+++ b/analytics_management/templates/campaign.html
@@ -14,7 +14,7 @@
     <div class='row'>
       <div class='col-lg-6 col-sm-6'>
         <h3>
-          {% trans "Analytics" %} - {{campaign_object.email_list.title}} - {{campaign_object.title}}
+          {% trans "Analytics" %} - {{campaign.email_list.title}} - {{campaign.title}}
         </h3>
       </div>
     </div>
