--- a/analytics_management/templates/campaign.html
+++ b/analytics_management/templates/campaign.html
@@ -4,7 +4,7 @@
 
 
 {% block title %}
-  Analytics - {{campaign_object.email_list.name}} - {{campaign_object.name}}
+  Analytics - {{campaign_object.email_list.name}} - {{campaign_object.title}}
 {% endblock %}
 
 
@@ -14,7 +14,7 @@
     <div class='row'>
       <div class='col-lg-6 col-sm-6'>
         <h3>
-          {% trans "Analytics" %} - {{campaign.email_list.title}} - {{campaign.title}}
+          {% trans "Analytics" %} - {{campaign.email_list.name}} - {{campaign.title}}
         </h3>
       </div>
     </div>
