--- a/template_management/templates/template_edit.html
+++ b/template_management/templates/template_edit.html
@@ -10,31 +10,37 @@
 
 {% block content %}
 
+  <br />
+
   <div class='container'>
+
     <div class='row'>
-      <div class='col-lg-12'>
-        <h2>
-          <a href='{% url 'template-list' %}'>{% trans "Templates" %}</a>
-          /
-          <a href='{% url 'template-detail' template.id %}'>{{ template.name}}</a>
-          / Edit
-        </h2>
+      <div class='col-lg-10 col-lg-offset-1 col-sm-12'>
+        <h3>
+          <a href='{% url 'template-list' %}'>{% trans "All Templates" %}</a>
+          &rsaquo;&nbsp;<a href='{% url 'template-detail' template.id %}'>{{template.name}}</a>
+          &rsaquo;&nbsp;{% trans 'Edit' %}
+        </h3>
       </div>
     </div>
 
-    <hr />
+		<br />
 
     <div class='row'>
-      <div class='col-lg-12'>
+      <div class='col-lg-10 col-lg-offset-1 col-sm-12'>
 
         <form method='post'>
 
           {% csrf_token %}
 
-          <p>
-            <label for="{{form.name.auto_id}}">Template name:</label>
-            <input id="{{form.name.auto_id}}" name="{{form.name.name}}" class='form-control input-lg' autofocus tabindex='0' value ='{{template.name}}'/>
-          </p>
+					<div class='row'>
+						<div class='col-xs-6'>
+						<p>
+							<label for="{{form.name.auto_id}}">Template name:</label>
+							<input id="{{form.name.auto_id}}" name="{{form.name.name}}" class='form-control' autofocus tabindex='0' value ='{{template.name}}'/>
+						</p>
+            </div>
+          </div>
 
           <br />
 
@@ -43,6 +49,8 @@
               <a href="#html-email" tabindex='4'>HTML Email</a></li>
             <li role="presentation">
               <a href="#text-email" tabindex='3'>Text Email</a></li>
+            <li role="presentation">
+              <a href="#placeholders" tabindex='3'>Placeholders</a></li>
           </ul>
           <div class="tab-content">
             <div id="html-email" class="tab-pane active" role='tabpanel'>
@@ -50,6 +58,9 @@
             </div>
             <div id='text-email' class='tab-pane' role='tabpanel'>
               <textarea id="{{form.text_template.auto_id}}" name="{{form.text_template.name}}" class='form-control' rows='15'>{{template.text_template}}</textarea>
+            </div>
+            <div id='placeholders' class='tab-pane' role='tabpanel'>
+              <textarea id="{{form.placeholders.auto_id}}" name="{{form.placeholders.name}}" class='form-control' rows='15'></textarea>
             </div>
           </div>
 
@@ -72,14 +83,14 @@
   <style>
     .CodeMirror {
       border: 1px solid #EEE;
-      height: auto;
+      height: 100%;
     }
     .CodeMirror-linenumbers {
       background: #DEDEDE;
     }
     .CodeMirror-scroll {
-      max-height: 3200px;
-      max-height: 400vh;
+      max-height: 1200px;
+      max-height: 100vh;
     }
   </style>
 {% endblock %}
@@ -102,7 +113,8 @@
       lineNumbers: true,
       mode: "text/html",
       viewportMargin: Infinity,
-      tabindex: "1"
+			lineWrapping: true,
+			tabindex: '-1'
     });
   </script>
 {% endblock %}
