--- a/template_management/templates/template_list.html
+++ b/template_management/templates/template_list.html
@@ -3,57 +3,64 @@
 
 
 {% block title %}
-  Templates
+	{% trans "All Templates" %}
 {% endblock %}
 
 
 {% block content %}
 
+	<br />
+
   <div class='container'>
+
     <div class='row'>
-      <div class='col-lg-6 col-sm-6'>
+      <div class='col-lg-10 col-lg-offset-1 col-sm-12'>
         <h3>
-          {% trans "Templates" %}
-          <small>{{ object_list|length }} {% trans "template"%}{% trans "template"|pluralize %}</small>
+          {% trans "All Templates" %}
+					&nbsp;&nbsp;<a class='btn btn-default' href='/templates/new'>{% trans 'Add a new template' %}</a>
         </h3>
-      </div>
-      <div class='col-lg-6 col-sm-6 text-right'>
-        <br />
-        <a class='btn btn-default' href='/templates/new'>{% trans 'Create a new template' %}</a>
       </div>
     </div>
 
-    <hr />
+		<br />
 
     <div class='row'>
+      <div class='col-lg-10 col-lg-offset-1 col-sm-12'>
+				<div class='row'>
 
-      {% for template in object_list %}
+				{% for template in object_list %}
 
-        <div class='col-lg-4 col-sm-6'>
-          <div class='panel panel-default'>
-            <div class='preview' style='position: relative; min-height: 300px; background: #f9f9f9; overflow: hidden;'>
-              <iframe style='border: 0; position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 10; transform: scale(0.50); transform-origin: 0 0; height: 200%; width: 200%;' width='100%' height='300px' src="{% url 'template-preview' template.id %}"> </iframe>
-              <a href='{% url 'template-detail' template.id %}' class='cover' style='position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 100;'></a>
-            </div>
-            <div class='container-fluid'>
-              <h4>
-                <a href='{% url 'template-detail' template.id %}'>{{ template.name }}</a>
-              </h4>
-            </div>
-          </div>
-        </div>
+					<div class='col-lg-3 col-sm-6'>
+							<div class='preview' style='position: relative; min-height: 300px; background: #fff; overflow: hidden; box-shadow: 0 1px 3px #9a9a9a'>
+								<iframe style='border: 0; position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 10; transform: scale(0.50); transform-origin: 0 0; height: 200%; width: 200%;' width='100%' height='300px' src="{% url 'template-preview' template.id %}"> </iframe>
+								<a href='{% url 'template-detail' template.id %}' class='cover' style='position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 100;'></a>
+							</div>
+							<div class='container-fluid'>
+								<h4 class='text-center'>
+									<a href='{% url 'template-detail' template.id %}'>{{ template.name }}</a>
+								</h4>
+						</div>
+					</div>
 
-      {% empty %}
+				{% empty %}
 
-        <div class='col-lg-12'>
-          <div class='alert alert-warning'>
-            {% trans 'No template available for now.' %}
-            <a href="{% url 'template-new' %}">Go create one &raquo;</a>
-          </div>
-        </div>
+					<div class='col-lg-10 col-lg-offset-1'>
+						<div class='alert alert-warning'>
+							{% trans 'No template available for now.' %}
+							<a href="{% url 'template-new' %}">Go create one &raquo;</a>
+						</div>
+					</div>
 
-      {% endfor %}
+				{% endfor %}
 
+					<aside class='col-lg-12 text-center text-muted' style='margin-top:4rem'>
+						&mdash;
+						<br />
+						{{ object_list|length }} templates
+					</aside>
+
+				</div>
+			</div>
     </div>
   </div>
 
