--- a/template_management/templates/template_new.html
+++ b/template_management/templates/template_new.html
@@ -10,49 +10,50 @@
 
 {% block content %}
 
+	<br />
+
   <div class='container'>
+
     <div class='row'>
-      <div class='col-lg-12'>
-        <h2>
-          <a href='{% url 'template-list' %}'>{% trans "Templates" %}</a>
-          / New template
-        </h2>
+      <div class='col-lg-10 col-lg-offset-1 col-sm-12'>
+        <h3>
+          <a href='{% url 'template-list' %}'>{% trans "All Templates" %}</a>
+          &rsaquo;&nbsp;{% trans 'New Template' %}
+        </h3>
       </div>
     </div>
 
-    <hr />
+		<br />
 
     <div class='row'>
-      <div class='col-lg-12'>
+      <div class='col-lg-10 col-lg-offset-1'>
 
         <form method='post'>
 
           {% csrf_token %}
 
-          <p>
-            <label for="{{form.name.auto_id}}">Template name:</label>
-            <input id="{{form.name.auto_id}}" name="{{form.name.name}}" class='form-control input-lg' autofocus tabindex='0' />
-          </p>
+					<div class='row'>
+						<div class='col-xs-6'>
+							<p>
+								<label for="{{form.name.auto_id}}">Template name:</label>
+								<input id="{{form.name.auto_id}}" name="{{form.name.name}}" class='form-control' autofocus tabindex='0' />
+							</p>
+						</div>
+					</div>
 
           <br />
 
           <ul id="newTemplateTabs" class="nav nav-tabs" role="tablist">
             <li role="presentation" class="active">
-              <a href="#html-email" tabindex='4'>HTML Email</a></li>
+              <a href="#html-email" tabindex='1'>HTML Email</a></li>
             <li role="presentation">
-              <a href="#text-email" tabindex='3'>Text Email</a></li>
+              <a href="#text-email" tabindex='2'>Text Email</a></li>
             <li role="presentation">
               <a href="#placeholders" tabindex='3'>Placeholders</a></li>
           </ul>
           <div class="tab-content">
             <div id="html-email" class="tab-pane active" role='tabpanel'>
-              <textarea tabindex='1' id="{{form.html_template.auto_id}}" name="{{form.html_template.name}}" class='form-control' rows='15'>
-
-
-
-
-
-  </textarea>
+              <textarea tabindex='1' id="{{form.html_template.auto_id}}" name="{{form.html_template.name}}" class='form-control' ></textarea>
             </div>
             <div id='text-email' class='tab-pane' role='tabpanel'>
               <textarea id="{{form.text_template.auto_id}}" name="{{form.text_template.name}}" class='form-control' rows='15'></textarea>
@@ -64,7 +65,7 @@
 
           <br />
           <br />
-          <button class='btn btn-success center-block'>Save this new template</button>
+          <button class='btn btn-success center-block' tabindex='5'>Save this new template</button>
 
         </form>
 
@@ -81,14 +82,14 @@
   <style>
     .CodeMirror {
       border: 1px solid #EEE;
-      height: auto;
+      height: 100%;
     }
     .CodeMirror-linenumbers {
       background: #DEDEDE;
     }
     .CodeMirror-scroll {
-      max-height: 3200px;
-      max-height: 400vh;
+      max-height: 1200px;
+      max-height: 100vh;
     }
   </style>
 {% endblock %}
@@ -111,7 +112,9 @@
       lineNumbers: true,
       mode: "text/html",
       viewportMargin: Infinity,
-      tabindex: "1"
+			lineWrapping: true,
+			tabindex: '-1'
     });
+    html_editor.setValue('\n\n\n\n\n\n\n\n')
   </script>
 {% endblock %}
