Fix title of template edition.

--- a/templates/master.html
+++ b/templates/master.html
@@ -19,7 +19,10 @@
 				right: 50%;
 				top: 50px;
 				transform: translateX(50%);
-				box-shadow: 0 1px 1px #84ac81;
+				box-shadow: 0 1px 1px #b3b3b3;
+			}
+			main {
+				min-height: 65vh;
 			}
 		</style>
   </head>
