--- a/template_management/templates/template_list.html
+++ b/template_management/templates/template_list.html
@@ -35,7 +35,7 @@
 								<iframe style='border: 0; position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 10; transform: scale(0.50); transform-origin: 0 0; height: 200%; width: 200%;' width='100%' height='300px' src="{% url 'template-preview' template.id %}"> </iframe>
 								<a href='{% url 'template-detail' template.id %}' class='cover' style='position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 100;'></a>
 							</div>
-							<div class='container-fluid'>
+							<div class='container-fluid' style='margin-bottom: 2rem'>
 								<h4 class='text-center'>
 									<a href='{% url 'template-detail' template.id %}'>{{ template.name }}</a>
 								</h4>
