--- a/template_management/templates/template_new.html
+++ b/template_management/templates/template_new.html
@@ -36,7 +36,18 @@
 						<div class='col-xs-6'>
 							<p>
 								<label for="{{form.name.auto_id}}">Template name:</label>
-								<input id="{{form.name.auto_id}}" name="{{form.name.name}}" class='form-control' autofocus tabindex='0' />
+								<input id="{{form.name.auto_id}}"
+											 name="{{form.name.name}}"
+											 class='form-control'
+											 required
+											 autofocus
+											 tabindex='0'
+											 value='{{form.name.value|default_if_none:""}}' />
+								<small class='text-danger'><strong>
+									{% for error in form.name.errors %}
+										{{ error }}
+									{% endfor %}
+								</strong></small>
 							</p>
 						</div>
 					</div>
@@ -45,24 +56,70 @@
 
           <ul id="newTemplateTabs" class="nav nav-tabs" role="tablist">
             <li role="presentation" class="active">
-              <a href="#html-email" tabindex='1'>HTML Email</a></li>
+							<a href="#html-email" tabindex='1' class='{% if form.html_template.errors %}text-danger{% endif %}'>
+								HTML Email
+								{% if form.html_template.errors %}
+									&nbsp;<i class='glyphicon glyphicon-warning-sign text-danger'></i>
+								{% endif %}
+							</a>
+						</li>
             <li role="presentation">
-              <a href="#text-email" tabindex='2'>Text Email</a></li>
+              <a href="#text-email" tabindex='2'>
+								Text Email
+								{% if form.text_template.errors %}
+									&nbsp;<i class='glyphicon glyphicon-warning-sign text-danger'></i>
+								{% endif %}
+							</a>
+						</li>
             <li role="presentation">
-              <a href="#placeholders" tabindex='3'>Placeholders</a></li>
+              <a href="#placeholders" tabindex='3'>
+								Placeholders
+								{% if form.placeholders.errors %}
+									&nbsp;<i class='glyphicon glyphicon-warning-sign text-danger'></i>
+								{% endif %}
+							</a>
+						</li>
           </ul>
-          <div class="tab-content">
-            <div id="html-email" class="tab-pane active" role='tabpanel'>
-              <textarea tabindex='1' id="{{form.html_template.auto_id}}" name="{{form.html_template.name}}" class='form-control' ></textarea>
-            </div>
-            <div id='text-email' class='tab-pane' role='tabpanel'>
-              <textarea id="{{form.text_template.auto_id}}" name="{{form.text_template.name}}" class='form-control' rows='15'></textarea>
-            </div>
-            <div id='placeholders' class='tab-pane' role='tabpanel'>
-              <textarea id="{{form.placeholders.auto_id}}" name="{{form.placeholders.name}}" class='form-control' rows='15'></textarea>
-            </div>
-          </div>
 
+          <div class="tab-content">
+
+            <div id="html-email" class="tab-pane active" role='tabpanel'>
+              <textarea tabindex='1'
+								        id="{{form.html_template.auto_id}}"
+												name="{{form.html_template.name}}"
+						class='form-control' >{{form.html_template.value|default_if_none:""}}</textarea>
+							<small class='text-danger'><strong>
+								{% for error in form.html_template.errors %}
+									{{ error }}
+								{% endfor %}
+							</strong></small>
+            </div>
+
+            <div id='text-email' class='tab-pane' role='tabpanel'>
+              <textarea id="{{form.text_template.auto_id}}"
+								        name="{{form.text_template.name}}"
+												class='form-control'
+								        rows='15'>{{form.text_template.value|default_if_none:""}}</textarea>
+							<small class='text-danger'><strong>
+								{% for error in form.text_template.errors %}
+									{{ error }}
+								{% endfor %}
+							</strong></small>
+            </div>
+
+            <div id='placeholders' class='tab-pane' role='tabpanel'>
+              <textarea id="{{form.placeholders.auto_id}}"
+												name="{{form.placeholders.name}}"
+												class='form-control'
+				                rows='15'>{{form.placeholders.value|default_if_none:""}}</textarea>
+							<small class='text-danger'><strong>
+								{% for error in form.placeholders.errors %}
+									{{ error }}
+								{% endfor %}
+							</strong></small>
+            </div>
+
+          </div>
           <br />
           <br />
           <button class='btn btn-success center-block' tabindex='5'>Save this new template</button>
