--- a/campaign_management/templates/campaign_detail.html
+++ b/campaign_management/templates/campaign_detail.html
@@ -10,99 +10,100 @@
 
 {% block content %}
 
+	<br />
+
   <div class='container'>
+
     <div class='row'>
-      <div class='col-lg-12'>
-        <ol class='breadcrumb'>
-          <li>
-            <a href='{% url 'campaign-list' %}'>{% trans "Emails" %}</a>
-          </li>
-          <li class='active'>
-            {{campaign.email_subject}}
-          </li>
-        </ol>
+      <div class='col-lg-10 col-lg-offset-2 col-sm-12'>
+        <h3>
+					<a href='{% url 'campaign-list' %}'>{% trans "All Emails" %}</a>
+				 	&rsaquo;&nbsp;{{ campaign.email_subject }}
+        </h3>
       </div>
     </div>
 
+		<br />
+
     <div class='row'>
+      <div class='col-lg-8 col-lg-offset-2'>
+				<div class='row'>
 
-        <div class='col-lg-8 col-sm-6'>
-          <div class='panel panel-default'>
-            <div class='preview' style='position: relative; min-height: 600px; height:auto; background: #fff; overflow: hidden;'>
-              <iframe style='border: 0; position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 10; transform: scale(0.90); transform-origin: 0 0; height: 112%; width: 112%;'
-                src='{% url "campaign-email-preview" campaign.id %}'> </iframe>
-              <div class='cover' style='position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 100;'></div>
-            </div>
-          </div>
-        </div>
+					<div class='col-lg-8 col-sm-12'>
+							<div class='preview' style='box-shadow: 0 1px 3px #9a9a9a;position: relative; min-height: 600px; height:auto; background: #fff; overflow: hidden;'>
+								<iframe style='border: 0; position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 10; transform: scale(0.90); transform-origin: 0 0; height: 112%; width: 112%;'
+									src='{% url "campaign-email-preview" campaign.id %}'> </iframe>
+								<div class='cover' style='position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 100;'></div>
+						</div>
+					</div>
 
-        <div class='col-lg-4 col-sm-6'>
+					<div class='col-lg-4 col-sm-12'>
 
-            <div class='container-fluid'>
-              {% if campaign.is_sent %}
-              <span class='label label-success'>SENT</span>
-              {% else %}
-              <span class='label label-warning'>NOT SENT</span>
-              {% endif %}
-              <br />
-              <br />
-              <ul class='list-unstyled'>
-                {% if not campaign.is_sent %}
-                  <li>
-                    <a class='text-primary' href="{% url 'campaign-review' campaign.id %}">
-                      {% trans 'Review and send' %}
-                    </a>
-                  </li>
-                {% else %}
-                  <li>
-                    {% trans "Sent to" %} {{campaign.recipient_count|default:'0'|intcomma}}
-                    {% trans "subscriber"%}{{campaign.recipient_count|pluralize}}
-                  </li>
-                {% endif %}
-                <li>
-                  <a class='text-primary' href="{% url 'campaign-email-preview' campaign.id %}" target='_blank'>
-                    {% if campaign.is_sent %}
-                      {% trans 'View email sent' %}
-                    {% else %}
-                      {% trans 'View email to be sent' %}
-                    {% endif %}
-                  </a>
-                </li>
-                {% if not campaign.is_sent %}
-                <li>
-                  <a class='text-primary' href="{% url 'campaign-update' campaign.id %}">
-                    {% trans 'Edit header' %}
-                  </a>
-                </li>
-                <li>
-                  <a class='text-primary' href="{% url 'campaign-compose-email' campaign.id %}">
-                    {% trans 'Compose email' %}
-                  </a>
-                </li>
-                {% endif %}
-                <li>
-                  <a href="{% url 'campaign-delete' campaign.id %}" data-toggle="modal" data-target="#campaign-delete-confirmation" class='text-danger'>
-                    {% trans 'Delete' %}
-                  </a>
-                </li>
-              </ul>
-              <hr />
-              <ul class='list-unstyled'>
+							<div class='container-fluid'>
 								{% if campaign.is_sent %}
-                <li>
-                  <small class='text-muted'>{% trans "sent:" %} {{ campaign.sent}}</small>
-								</li>
+								<span class='label label-success'>SENT</span>
+								{% else %}
+								<span class='label label-warning'>DRAFT</span>
 								{% endif %}
-                <li>
-                  <small class='text-muted'>{% trans "created:" %} {{ campaign.created }}</small>
-                </li>
-                <li>
-                  <small class='text-muted'>{% trans "last edited:" %} {{ campaign.edited}}</small>
-                </li>
-              </p>
-            </div>
-          </div>
-        </div>
+								<br />
+								<br />
+								<ul class='list-unstyled'>
+									{% if not campaign.is_sent %}
+										<li>
+											<a class='text-primary' href="{% url 'campaign-review' campaign.id %}">
+												{% trans 'Review and send' %}
+											</a>
+										</li>
+									{% else %}
+										<li>
+											{% trans "Sent to" %} {{campaign.recipient_count|default:'0'|intcomma}}
+											{% trans "subscriber"%}{{campaign.recipient_count|pluralize}}
+										</li>
+									{% endif %}
+									<li>
+										<a class='text-primary' href="{% url 'campaign-email-preview' campaign.id %}" target='_blank'>
+											{% if campaign.is_sent %}
+												{% trans 'View email sent' %}
+											{% else %}
+												{% trans 'View email to be sent' %}
+											{% endif %}
+										</a>
+									</li>
+									{% if not campaign.is_sent %}
+									<li>
+										<a class='text-primary' href="{% url 'campaign-update' campaign.id %}">
+											{% trans 'Edit header' %}
+										</a>
+									</li>
+									<li>
+										<a class='text-primary' href="{% url 'campaign-compose-email' campaign.id %}">
+											{% trans 'Compose email' %}
+										</a>
+									</li>
+									{% endif %}
+									<li>
+										<a href="{% url 'campaign-delete' campaign.id %}" data-toggle="modal" data-target="#campaign-delete-confirmation" class='text-danger'>
+											{% trans 'Delete' %}
+										</a>
+									</li>
+								</ul>
+								<hr />
+								<ul class='list-unstyled'>
+									{% if campaign.is_sent %}
+									<li>
+										<small class='text-muted'>{% trans "sent:" %} {{ campaign.sent}}</small>
+									</li>
+									{% endif %}
+									<li>
+										<small class='text-muted'>{% trans "created:" %} {{ campaign.created }}</small>
+									</li>
+									<li>
+										<small class='text-muted'>{% trans "last edited:" %} {{ campaign.edited}}</small>
+									</li>
+								</p>
+							</div>
+						</div>
+					</div>
 
     </div>
   </div>
