--- a/campaign_management/templates/campaign_list.html
+++ b/campaign_management/templates/campaign_list.html
@@ -5,60 +5,81 @@
 
 
 {% block title %}
-  {% trans 'Emails' %}
+  {% trans 'All Emails' %}
 {% endblock %}
 
 {% block content %}
 
+	<br />
+
   <div class='container'>
+
     <div class='row'>
-      <div class='col-lg-6 col-sm-6'>
+      <div class='col-lg-9 col-lg-offset-2 col-sm-12'>
         <h3>
-          {% trans "Emails" %}
+          {% trans "All Emails" %} &nbsp;&nbsp;<a class='btn btn-default'
+						href='{% url "campaign-new" %}'>{% trans 'Compose email' %}</a>
         </h3>
-      </div>
-      <div class='col-lg-6 col-sm-6 text-right'>
-        <br />
-        <a class='btn btn-default' href='{% url "campaign-new" %}'>{% trans 'Compose email' %}</a>
       </div>
     </div>
 
-    <hr />
+    <br />
 
     <div class='row'>
       <div class='col-lg-12'>
-        <div class="list-group">
+
           {% for campaign in object_list %}
-            <a href="{% url 'campaign-detail' campaign.id %}" class="list-group-item">
-              <h4 class="list-group-item-heading">
-                <small>
-                  {% if campaign.is_sent %}
-                  <span class='label label-success'><i class='glyphicon glyphicon-ok'></i> SENT</span>
-                  {% else %}
-                  <span class='label label-warning'><i class='glyphicon glyphicon-pencil'></i> DRAFT</span>
-                  {% endif %}
-                </small>
-                {{ campaign.email_subject }}
-              </h4>
-              <p class="list-group-item-text">
-              {% if campaign.is_sent %}
-              Sent to {{campaign.recipient_count|default:'0'|intcomma}}
-              subscriber{{campaign.recipient_count|pluralize}}
-              <br />
-              {% endif %}
-              <strong>From:</strong> {{ campaign.email_from_name }} &lt;{{ campaign.email_from_email }}&gt;
-              <br />
-              <strong>To recipients:</strong> {{ campaign.email_list }} &mdash; {{ campaign.email_list.count_validated_subscribers|intcomma }} subscriber{{ campaign.email_list.count_validated_subscribers|pluralize }}
-              <br />
-              <small class='text-muted' title='{{ campaign.created }}'>created: {{ campaign.created|timesince }} ago</small>
-              </p>
-            </a>
+						<div class='row' style='margin-bottom:3rem'>
+								<div class='col-lg-2 text-right'>
+									{% if campaign.is_sent %}
+										<span class='alert-success'>&thinsp;SENT&thinsp;</span>
+										<br />
+										<small class='text-muted'>Sent: {{campaign.sent|date:"H:m D d M Y"}}</small>
+									{% else %}
+										<span class='alert-warning'>&thinsp;DRAFT&thinsp;</span>
+										<br />
+										<small class='text-muted'>Edited: {{campaign.edited|timesince}} ago</small>
+									{% endif %}
+								</small>
+								</div>
+
+							<a href="{% url 'campaign-detail' campaign.id %}" style='color: #333'>
+
+								<div class='col-lg-2'>
+									<div class='preview' style='position: relative; min-height: 200px; height:auto; background: #fff; overflow: hidden; box-shadow: 0 1px 3px #9a9a9a'>
+										<iframe style='border: 0; position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 10; transform: scale(0.40); transform-origin: 0 0; height: 250%; width: 250%;' src='/templates/{{campaign.using_template.id}}/preview'></iframe>
+										<div class='cover' style='position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 100;'></div>
+									</div>
+								</div>
+
+								<div class='col-lg-6'>
+									<h4 style='margin-top: 0;font-weight:700'>
+										{{ campaign.email_subject }}
+									</h4>
+								</div>
+
+								<div class='col-lg-6'>
+									<p>
+										<strong>From:</strong> {{ campaign.email_from_name }} &lt;{{ campaign.email_from_email }}&gt;
+										<br />
+										<strong>To recipients:</strong> {{ campaign.email_list }} &mdash; {{ campaign.email_list.count_validated_subscribers|intcomma }} subscriber{{ campaign.email_list.count_validated_subscribers|pluralize }}
+										<br />
+										<strong>Reply-To:</strong> {{ campaign.email_reply_to_email}}
+									</p>
+								</div>
+							</a>
+						</div>
+
           {% empty %}
+
+					  <br >
             <div class='alert alert-warning'>
               No email composed yet.
               <a href="{% url 'campaign-new' %}">Go compose one &raquo;</a>
             </div>
+
           {% endfor %}
+
         </div>
       </div>
     </div>
