--- a/analytics_management/templates/campaign.html
+++ b/analytics_management/templates/campaign.html
@@ -1,6 +1,7 @@
 {% extends "master.html" %}
 {% load i18n %}
 {% load humanize %}
+{% load staticfiles %}
 
 
 {% block title %}
@@ -19,6 +20,7 @@
       </div>
     </div>
     <hr />
+    <canvas id="myChart" width="100%" height="30"></canvas>
     <h4>{% trans "Open rate" %}:</h4>
     <ul>
         <li><string>{% trans "Unique" %}:</strong> {{ open_rate_object.unique_count }}</li>
@@ -41,13 +43,41 @@
 
 
 {% block script %}
+<script src='{% static "js/vendor/chart.min.js" %}'></script>
 <script>
-  $.get(
-      "{% url 'analytics-management-api-open-date-by-merger' campaign.email_list.uuid campaign.uuid 'hour' %}",
-      "",
-      function(data) {
-          console.log(data)
-      }
+    $.get(
+        "{% url 'analytics-management-api-open-date-by-merger' campaign.email_list.uuid campaign.uuid 'hour' %}",
+        "",
+        function(data) {
+
+            var labels = []
+            var dataUnique = []
+            for (var i = 0; i < data.length; i++) {
+                labels.push(data[i].date)
+                dataUnique.push(data[i].unique_count)
+            }
+            var ctx = document.getElementById("myChart");
+            var myChart = new Chart(ctx, {
+                type: 'bar',
+                data: {
+                    labels: labels,
+                    datasets: [{
+                        label: 'Unique open',
+                        data: dataUnique,
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    scales: {
+                        yAxes: [{
+                            ticks: {
+                                beginAtZero:true
+                            }
+                        }]
+                    }
+                }
+            });
+        }
   )
 </script>
 {% endblock %}
