--- a/analytics_management/templates/campaign.html
+++ b/analytics_management/templates/campaign.html
@@ -20,7 +20,7 @@
       </div>
     </div>
     <hr />
-    <canvas id="myChart" width="100%" height="30"></canvas>
+    <canvas id="myChart" width="4" height="2"></canvas>
     <h4>{% trans "Open rate" %}:</h4>
     <ul>
         <li><string>{% trans "Unique" %}:</strong> {{ open_rate_object.unique_count }}</li>
