--- a/campaign_management/templates/campaign_header.html
+++ b/campaign_management/templates/campaign_header.html
@@ -13,113 +13,102 @@
 
 {% block content %}
 
-  <div class='container'>
-    <div class='row'>
-      <div class='col-lg-12'>
-        <ol class='breadcrumb'>
-          <li>
-            <a href='{% url 'campaign-list' %}'>{% trans "Emails" %}</a>
-          </li>
-          {% if campaign %}
-            <li>
-              <a href='{% url 'campaign-detail' campaign.id %}'>{{campaign.email_subject}}</a>
-            </li>
-            <li class='active'>
-              {% trans "Edit" %}
-            </li>
-          {% else %}
-            <li >
-              {% trans "New email" %}
-            </li>
-            {% endif %}
-        </ol>
-      </div>
-    </div>
+	<br />
 
-    <div class='row'>
-      <form method='post' id='email-header'>
-        <div class='col-lg-6 col-lg-offset-3'>
+	<div class='row'>
+		<div class='col-lg-4 col-lg-offset-4 col-sm-12'>
+			<h3>
+				{% trans "Compose Email" %}
+				&rsaquo;&nbsp;{% trans "Email Header" %}
+			</h3>
+		</div>
+	</div>
 
-          {% csrf_token %}
+	<div class='row'>
+		<form method='post' id='email-header'>
+			<div class='col-lg-4 col-lg-offset-4 col-sm-12'>
+				{% csrf_token %}
+				<div class="form-group">
+					<label for="{{form.email_from_name.auto_id}}" class='control-label'>From name:</label>
+					<input id="{{form.email_from_name.auto_id}}"
+								 name="{{form.email_from_name.name}}"
+								 class='form-control'
+								 tabindex='1'
+								 {% if not focus or focus == 'from_name' %}autofocus{% endif %}
+								 maxlength='{{form.email_from_name.field.max_length}}'
+								 value='{{form.email_from_name.value|default:user.full_name}}'
+								 />
+					<small class='text-danger'><strong>
+						{% for error in form.email_from_name.errors %}
+							{{ error }}
+						{% endfor %}
+					</strong></small>
+					<small class='help-block'>The name your recipients will see in the <code>From:</code> field.</small>
+				</div>
 
-          <h3>Email Header</h3>
+				<div class="form-group">
+					<label for="{{form.email_from_email.auto_id}}" class='control-label'>From email:</label>
+					{% if from_emails %}
+						<select id="{{form.email_from_email.auto_id}}"
+										class="form-control"
+									 {% if focus == 'from_email' %}autofocus{% endif %}
+									  tabindex='2'>
+							{% for email in from_emails %}
+								<option value='{{email}}'> {{email}} </option>
+							{% endfor %}
+						</select>
+					{% else %}
+						<div class='alert-warning alert' style='margin-bottom: 0'>
+							No email verified yet.
+							<a tabindex='2' href='mailto:julien@nepsilon.net?subject=Minimail - Please verify this email address'>Contact us</a> to verify your sender email.
+						</div>
+					{% endif %}
+					<small class='help-block'>The email address your recipients will see in the <code>From:</code> field.</small>
+				</div>
 
-          <div class="form-group">
-            <label for="{{form.email_from_name.auto_id}}" class='control-label'>From name:</label>
-            <input id="{{form.email_from_name.auto_id}}"
-                   name="{{form.email_from_name.name}}"
-                   class='form-control'
-                   tabindex='1'
-									 autofocus
-                   maxlength='{{form.email_from_name.field.max_length}}'
-                   value='{{form.email_from_name.value|default:user.full_name}}'
-                   />
-            <small class='text-danger'><strong>
-              {% for error in form.email_from_name.errors %}
-                {{ error }}
-              {% endfor %}
-            </strong></small>
-            <small class='help-block'>The name your recipients will see in the <code>From:</code> field.</small>
-          </div>
+				<div class="form-group">
+					<label for="{{form.email_reply_to_email.auto_id}}" class='control-label'>Reply To email:</label>
+					<input type='email'
+								 id="{{form.email_reply_to_email.auto_id}}"
+								 name="{{form.email_reply_to_email.name}}"
+								 class='form-control'
+								 tabindex='3'
+								 {% if focus == 'reply-to' %}autofocus{% endif %}
+								 maxlength='{{form.email_reply_to_email.field.max_length}}'
+								 value='{{form.email_reply_to_email.value|default:user.email}}'
+								 />
+					<small class='text-danger'><strong>
+						{% for error in form.email_reply_to_email.errors %}
+							{{ error }}
+						{% endfor %}
+					</strong></small>
+					<small class='help-block'>The email address your subscribers can reply to.</small>
+				</div>
 
-          <div class="form-group">
-            <label for="{{form.email_from_email.auto_id}}" class='control-label'>From email:</label>
-            {% if from_emails %}
-              <select id="{{form.email_from_email.auto_id}}" class="form-control" tabindex='2'>
-                {% for email in from_emails %}
-                  <option value='{{email}}'> {{email}} </option>
-                {% endfor %}
-              </select>
-            {% else %}
-              <div class='alert-warning alert' style='margin-bottom: 0'>
-                No email verified yet.
-                <a tabindex='2' href='mailto:julien@nepsilon.net?subject=Minimail - Please verify this email address'>Contact us</a> to verify your sender email.
-              </div>
-            {% endif %}
-            <small class='help-block'>The email address your recipients will see in the <code>From:</code> field.</small>
-          </div>
+				<div class="form-group">
+					<label for="{{form.email_subject.auto_id}}" class='control-label'>Email subject:</label>
+					<input id="{{form.email_subject.auto_id}}"
+								 name="{{form.email_subject.name}}" class='form-control'
+								 maxlength='{{form.email_subject.field.max_length}}'
+								 tabindex='4'
+								 {% if focus == 'subject' %}autofocus{% endif %}
+								 placeholder='E.g: Issue #1: About this newsletter'
+								 value='{{form.email_subject.value|default:""}}'/>
+					<small class='text-danger'><strong>
+						{% for error in form.email_subject.errors %}
+							{{ error }}
+						{% endfor %}
+					</strong></small>
+					<small class='help-block'>Max 150 characters. You can you emojis too.</small>
+				</div>
 
-          <div class="form-group">
-            <label for="{{form.email_reply_to_email.auto_id}}" class='control-label'>Reply To email:</label>
-            <input type='email'
-                   id="{{form.email_reply_to_email.auto_id}}"
-                   name="{{form.email_reply_to_email.name}}"
-                   class='form-control'
-                   tabindex='3'
-                   maxlength='{{form.email_reply_to_email.field.max_length}}'
-                   value='{{form.email_reply_to_email.value|default:user.email}}'
-                   />
-            <small class='text-danger'><strong>
-              {% for error in form.email_reply_to_email.errors %}
-                {{ error }}
-              {% endfor %}
-            </strong></small>
-            <small class='help-block'>The email address your subscribers can reply to.</small>
-          </div>
-
-          <div class="form-group">
-            <label for="{{form.email_subject.auto_id}}" class='control-label'>Email subject:</label>
-            <input id="{{form.email_subject.auto_id}}"
-                   name="{{form.email_subject.name}}" class='form-control'
-                   maxlength='{{form.email_subject.field.max_length}}'
-                   tabindex='4'
-                   placeholder='E.g: Issue #1: About this newsletter'
-                   value='{{form.email_subject.value|default:""}}'/>
-            <small class='text-danger'><strong>
-              {% for error in form.email_subject.errors %}
-                {{ error }}
-              {% endfor %}
-            </strong></small>
-            <small class='help-block'>Max 150 characters. You can you emojis too.</small>
-          </div>
-
-          <div class="form-group">
-            <label for="{{form.email_list.auto_id}}">To recipients:</label>
-            {% if not lists %}
-              <p class='alert alert-warning'>
-                You don’t have any subscriber list yet.
-                <a href='{% url 'subscriber-management-create' %}' tabindex='5'>Click here to create your first list &raquo;</a>
-              </p>
+				<div class="form-group">
+					<label for="{{form.email_list.auto_id}}">To recipients:</label>
+					{% if not lists %}
+						<p class='alert alert-warning'>
+							You don’t have any subscriber list yet.
+							<a href='{% url 'subscriber-management-create' %}' tabindex='5'>Click here to create your first list &raquo;</a>
+						</p>
 <!--               <textarea id='{{form.email_list.auto_id}}' class='form-control' -->
 <!--                         rows='3' placeholder='john@doe.com, John Doe -->
 <!-- janet@gmail.com, Janet Dupont'></textarea> -->
@@ -131,30 +120,38 @@
 <!--               <small class='help-block'> -->
 <!--                 Max 100 subscribers, one subscriber per line. <a href="{% url 'subscriber-management-create' %}">Create a list for more subscribers</a>. -->
 <!--               </small> -->
-            {% else %}
-                <select id="{{form.email_list.auto_id}}" name="{{form.email_list.name}}" class="form-control" tabindex='5'>
-                {% for list in lists %}
-                <option value='{{list.id}}' {% if list.id == campaign.email_list.id %}selected{%endif %}>
-                  {{list.name}} &mdash; {{list.count_validated_subscribers}} {% trans 'subscriber' %}{{list.count_validated_subscribers|pluralize}}
-                </option>
-                {% endfor %}
-                </select>
-              <div class='help-block'>Or <a href="{% url 'subscriber-management-create' %}"> create a new list</a>.</div>
-            {% endif %}
-          </div>
+					{% else %}
+							<select id="{{form.email_list.auto_id}}"
+								      name="{{form.email_list.name}}"
+											class="form-control"
+											{% if focus == 'recipient' %}autofocus{% endif %}
+											tabindex='5'>
+							{% for list in lists %}
+							<option value='{{list.id}}' {% if list.id == campaign.email_list.id %}selected{%endif %}>
+								{{list.name}} &mdash; {{list.count_validated_subscribers}} {% trans 'subscriber' %}{{list.count_validated_subscribers|pluralize}}
+							</option>
+							{% endfor %}
+							</select>
+						<div class='help-block'>Or <a href="{% url 'subscriber-management-create' %}"> create a new list</a>.</div>
+					{% endif %}
+				</div>
 
-        </div>
+			</div>
 
-        <div class='row'>
-          <div class='col-lg-6 col-lg-offset-3'>
-            <hr />
-            <button class='btn btn-success pull-right' {% if not lists %}disabled{% endif %} tabindex='6'>
-              Next: <strong>Compose Email</strong> &raquo;
-            </button>
-          </div>
-        </div>
+			<div class='row'>
+				<div class='col-lg-4 col-lg-offset-4'>
+					<hr />
+					<button class='btn btn-success pull-right' {% if not lists %}disabled{% endif %} tabindex='6'>
+						{% if campaign.using_template %}
+						Next: <strong>Compose Email</strong> &raquo;
+						{% else %}
+						Next: <strong>Select Template</strong> &raquo;
+						{% endif %}
+					</button>
+				</div>
+			</div>
 
-      </form>
+		</form>
 
     </div>
   </div>
