--- a/campaign_management/templates/campaign_choose_template.html
+++ b/campaign_management/templates/campaign_choose_template.html
@@ -32,8 +32,7 @@
 							<div class='preview' style='position: relative; min-height: 300px; background: #fff; overflow: hidden; box-shadow: 0 1px 3px #9a9a9a'>
 								{% csrf_token %}
 								<input type='hidden' name='template_id' value='{{ template.id }}' />
-								<iframe style='border: 0; position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 10; transform: scale(0.50); transform-origin: 0 0; height: 200%; width: 200%;' width='100%' height='300px' src="{% url 'template-preview' template.id %}">
-								</iframe>
+								<iframe onload='this.style.opacity=1' style='opacity: 0; transition: opacity .185s ease-out;border: 0; position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 10; transform: scale(0.40); transform-origin: 0 0; height: 250%; width: 250%;' src='{% url 'template-preview' template.id %}'></iframe>
 								<a href='javascript:document.getElementById("form-{{template.id}}").submit()'
 								  class='cover' style='position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 100;'></a>
 							</div>
